# AsyncMulticastDelegateModern

./: .cproject  .gitattributes  .project  CMakeLists.txt  Doxyfile  README.md  main.cpp
.github/workflows/: cmake_clang.yml  cmake_ubuntu.yml  cmake_windows.yml  cpp_delegates.yml
Allocator/: CMakeLists.txt  stl_allocator.h  xallocator.cpp  xlist.h  xmap.h  xqueue.h
Delegate/: CMakeLists.txt  Delegate.h  DelegateAsync.cpp  DelegateAsync.h  DelegateAsyncWait.h  DelegateInvoker.h  DelegateLib.h  DelegateMsg.h  DelegateOpt.h  DelegateRemoteInvoker.cpp  DelegateRemoteInvoker.h  DelegateRemoteRecv.h  DelegateRemoteSend.h  DelegateSp.h  DelegateSpAsync.h  DelegateThread.h  DelegateTransport.h  DelegateUnitTests.cpp  LockGuard.cpp  LockGuard.h  MulticastDelegate.h  MulticastDelegateSafe.h  Semaphore.cpp  Semaphore.h  SinglecastDelegate.h  make_tuple_heap.h  src_dup.py
Docs/: DETAILS.md
Examples/: CMakeLists.txt  SysData.cpp  SysData.h  SysDataNoLock.cpp  SysDataNoLock.h
Port/: Fault.cpp  ThreadMsg.h  ThreadWin.cpp  ThreadWin.h  Timer.cpp  Timer.h  UserMsgs.h  WorkerThreadStd.cpp  WorkerThreadStd.h  WorkerThreadWin.cpp  WorkerThreadWin.h
VS2015/: VS2015.sln
VS2015/VS2015/: VS2015.vcxproj  VS2015.vcxproj.filters
VS2017/: VS2017.sln
VS2017/VS2017/: VS2017.vcxproj  VS2017.vcxproj.filters
docs/: DETAILS.md  Doxyfile  index.html
docs/html/: _delegate_8h.html  _delegate_8h.js  _delegate_8h_source.html  _delegate_async_8h.html  _delegate_async_8h.js  _delegate_async_8h_source.html  _delegate_async_wait_8h.html  _delegate_async_wait_8h.js  _delegate_async_wait_8h_source.html  _delegate_invoker_8h.html  _delegate_invoker_8h_source.html  _delegate_lib_8h.html  _delegate_lib_8h_source.html  _delegate_msg_8h.html  _delegate_msg_8h_source.html  _delegate_opt_8h.html  _delegate_opt_8h.js  _delegate_opt_8h_source.html  _delegate_thread_8h.html  _delegate_thread_8h.js  _delegate_thread_8h_source.html  _multicast_delegate_8h.html  _multicast_delegate_8h.js  _multicast_delegate_8h_source.html  _multicast_delegate_safe_8h.html  _multicast_delegate_safe_8h.js  _multicast_delegate_safe_8h_source.html  _r_e_a_d_m_e_8md.html  _semaphore_8h.html  _semaphore_8h.js  _semaphore_8h_source.html  _singlecast_delegate_8h.html  _singlecast_delegate_8h_source.html  _unicast_delegate_8h.html  _unicast_delegate_8h.js  _unicast_delegate_8h_source.html  annotated.html  annotated_dup.js  class_delegate_lib_1_1_delegate_3_01_ret_type_07_args_8_8_8_08_4-members.html  class_delegate_lib_1_1_delegate_3_01_ret_type_07_args_8_8_8_08_4.html  (+147 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  (+34 more)
doxygen/: Doxyfile
doxygen/html/: _allocator_2_fault_8h_source.html  _allocator_8h_source.html  _data_types_8h_source.html  _delegate_8h.html  _delegate_8h.js  _delegate_8h__dep__incl.dot  _delegate_8h__incl.dot  _delegate_8h_source.html  _delegate_async_8h.html  _delegate_async_8h.js  _delegate_async_8h__dep__incl.dot  _delegate_async_8h__incl.dot  _delegate_async_8h_source.html  _delegate_async_wait_8h.html  _delegate_async_wait_8h.js  _delegate_async_wait_8h__dep__incl.dot  _delegate_async_wait_8h__incl.dot  _delegate_async_wait_8h_source.html  _delegate_invoker_8h.html  _delegate_invoker_8h.js  _delegate_invoker_8h__dep__incl.dot  _delegate_invoker_8h__incl.dot  _delegate_invoker_8h_source.html  _delegate_lib_8h__incl.dot  _delegate_msg_8h.html  _delegate_msg_8h.js  _delegate_msg_8h__dep__incl.dot  _delegate_msg_8h__incl.dot  _delegate_msg_8h_source.html  _delegate_opt_8h.html  _delegate_opt_8h.js  _delegate_opt_8h__dep__incl.dot  _delegate_opt_8h__incl.dot  _delegate_thread_8h__dep__incl.dot  _delegate_thread_8h__incl.dot  _delegate_thread_8h_source.html  _multicast_delegate_8h__dep__incl.dot  _multicast_delegate_8h__incl.dot  _multicast_delegate_8h_source.html  _multicast_delegate_safe_8h__dep__incl.dot  (+258 more)
doxygen/latex/: _allocator_2_fault_8h_source.tex  _allocator_8h_source.tex  _data_types_8h_source.tex  _delegate_8h.tex  _delegate_8h__dep__incl.dot  _delegate_8h__incl.dot  _delegate_8h_source.tex  _delegate_async_8h.tex  _delegate_async_8h__dep__incl.dot  _delegate_async_8h__incl.dot  _delegate_async_8h_source.tex  _delegate_async_wait_8h.tex  _delegate_async_wait_8h__dep__incl.dot  _delegate_async_wait_8h__incl.dot  _delegate_async_wait_8h_source.tex  _delegate_invoker_8h.tex  _delegate_invoker_8h__dep__incl.dot  _delegate_invoker_8h__incl.dot  _delegate_invoker_8h_source.tex  _delegate_lib_8h.tex  _delegate_lib_8h__incl.dot  _delegate_lib_8h_source.tex  _delegate_msg_8h.tex  _delegate_msg_8h__dep__incl.dot  _delegate_msg_8h__incl.dot  _delegate_msg_8h_source.tex  _delegate_opt_8h.tex  _delegate_opt_8h__dep__incl.dot  _delegate_opt_8h__incl.dot  _delegate_opt_8h_source.tex  _delegate_thread_8h.tex  _delegate_thread_8h__dep__incl.dot  _delegate_thread_8h__incl.dot  _delegate_thread_8h_source.tex  _multicast_delegate_8h.tex  _multicast_delegate_8h__dep__incl.dot  _multicast_delegate_8h__incl.dot  _multicast_delegate_8h_source.tex  _multicast_delegate_safe_8h.tex  _multicast_delegate_safe_8h__dep__incl.dot  (+185 more)
src/: main.cpp
src/Allocator/: xallocator.h  xset.h
src/Delegate/: CMakeLists.txt  Delegate.h  DelegateAsync.h  DelegateAsyncWait.h  DelegateInvoker.h  DelegateLib.h  DelegateMsg.h  DelegateOpt.h  DelegateThread.h  MulticastDelegate.h  MulticastDelegateSafe.h  Semaphore.h  SinglecastDelegate.h  UnicastDelegate.h  make_tuple_heap.h
src/Examples/: ActiveObject.cpp  ActiveObject.h  AsyncFuture.cpp  AsyncFuture.h  CountdownLatch.cpp  CountdownLatch.h  Observer.cpp  Observer.h  ProducerConsumer.cpp  ProducerConsumer.h  SysData.cpp  SysDataNoLock.cpp  SysDataNoLock.h  SysDataTypes.h
src/Port/: CMakeLists.txt  ThreadMsg.h  Timer.h  WorkerThreadStd.cpp  WorkerThreadStd.h
tests/UnitTests/: CMakeLists.txt  Containers_UT.cpp  DelegateAsyncWait_UT.cpp  DelegateAsync_UT.cpp  DelegateThreads_UT.cpp  DelegateUnitTests.cpp  Delegate_UT.cpp  UnitTestCommon.cpp  UnitTestCommon.h
(+37 files in other folders)
